syntax = "proto3";

message RateLimitProof {
  bytes proof = 1;
  bytes merkle_root = 2;
  bytes epoch = 3;
  bytes share_x = 4;
  bytes share_y = 5;
  bytes nullifier = 6;
}

message WakuMessage {
  optional bytes payload = 1;
  optional string content_topic = 2;
  optional uint32 version = 3;
  optional double timestamp_deprecated  = 4;
  optional sint64 timestamp  = 10;
  optional RateLimitProof rate_limit_proof = 21;
}

